-Agrego y defino colores de aplicacion

--- a/PartidosMetegol/src/app/pages/login/login.page.html
+++ b/PartidosMetegol/src/app/pages/login/login.page.html
@@ -1,7 +1,10 @@
 <ion-content >
-  <ion-text color="primary" >
-    <h2 class="title">Bienvenidos</h2>
+  <ion-text >
+    <h2 class="title">Partidos</h2>
+    <h2 class="title">de</h2>
+    <h2 class="title">Metegol</h2>
   </ion-text>
+  <!-- <img src="../../../assets/images/iconometegol.png"/> -->
   <form [formGroup]="loginForm">
     <ion-item lines="full">
       <ion-label position="floating">Email</ion-label>
