--- a/PartidosMetegol/src/app/pages/home/home.page.html
+++ b/PartidosMetegol/src/app/pages/home/home.page.html
@@ -1,14 +1,14 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<!-- <ion-header [translucent]="true" >
+  <ion-toolbar color="secondary">
     <ion-title>
       Blank
     </ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
-    <ion-toolbar>
+    <ion-toolbar color="secondary">
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
